# firmware-nordic-thingy91

./: .gitignore  CMakeLists.txt  Kconfig  README.md  overlay-remote-ingestion.conf  prj.conf
boards/: thingy91_nrf9160_ns.overlay
connectivity_bridge/: prj.conf
edge-impulse/ingestion-sdk-c/: ei_config.h  ei_run_impulse_thread.cpp  ei_run_impulse_thread.h  ei_sampler.cpp  ei_sampler.h
edge-impulse/ingestion-sdk-platform/NordicSemi-nrf91/: connectivity.c  connectivity.h  ei_device_nordic_nrf91.cpp  ei_device_nordic_nrf91.h  ei_main.cpp  ei_zephyr_flash_commands.cpp  ei_zephyr_flash_commands.h
edge-impulse/ingestion-sdk-platform/NordicSemi-nrf91/sensors/: ei_environmentsensor.cpp  ei_environmentsensor.h  ei_fusion.cpp  ei_fusion.h  ei_fusion_sensors_config.h  ei_inertialsensor.cpp  ei_inertialsensor.h  ei_lightsensor.cpp  ei_lightsensor.h
edge-impulse/ingestion-sdk-platform/NordicSemi-nrf91/sensors/bme68x/: bme68x_port.c
edge-impulse/repl/: at_cmd_interface.h  at_cmds.h  repl.cpp
model-parameters/: dsp_blocks.h  model_metadata.h  model_variables.h
src/: CMakeLists.txt  ei_at_handlers.cpp  ei_at_handlers.h  ei_device_nrf91.cpp  ei_device_nrf91.h  ei_memory.cpp  ei_memory.h  ei_sampler.cpp  ei_sampler.h  ei_ws_client.cpp  ei_ws_client.h  main.cpp
src/inference/: CMakeLists.txt  ei_run_fusion_impulse.cpp
src/sensors/: CMakeLists.txt  ei_accelerometer.cpp  ei_accelerometer.h  ei_environment.cpp  ei_environment.h  ei_fusion_sensors_config.h  ei_light.cpp  ei_light.h
tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
